# SeatDemo

./: actuator.py  main.py  pyproject.toml  wifi.txt
templates/: index.html
